# netstashd

./: .env.example  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
src/netstashd/: __init__.py  __main__.py  app.py  auth.py  cleanup.py  codes.py  config.py  db.py  logging.py  models.py  secrets.py  storage.py  templates.py
src/netstashd/cli/: main.py
src/netstashd/routers/: api.py  dashboard.py  stash.py
src/netstashd/static/css/: style.css
src/netstashd/static/js/: fileicons.js  preview.js  uploader.js
src/netstashd/templates/: base.html  dashboard.html  index.html  login.html  stash.html  stash_auth.html
tests/: conftest.py  test_auth.py  test_cleanup.py  test_codes.py  test_config.py  test_models.py  test_routes.py  test_secrets.py
